example/src/snapshots/adze_example__arithmetic__tests__failed_parses-3.snap
---
source: src/arithmetic.rs
assertion_line: 182
expression: "grammar::parse(\"a1\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
    ],
)
