example/src/snapshots/adze_example__arithmetic__tests__failed_parses-4.snap
---
source: example/src/arithmetic.rs
expression: "grammar::parse(\"1a\")"
---
Ok(
    Number(
        1,
    ),
)
