example/src/snapshots/adze_example__arithmetic__tests__large_number.snap
---
source: src/arithmetic.rs
expression: "grammar::parse(\"999999\")"
---
Ok(
    Number(
        999999,
    ),
)
