example/src/snapshots/adze_example__arithmetic__tests__leading_zeros.snap
---
source: src/arithmetic.rs
expression: "grammar::parse(\"007\")"
---
Ok(
    Number(
        7,
    ),
)
