example/src/snapshots/adze_example__arithmetic__tests__nested_single.snap
---
source: src/arithmetic.rs
expression: "grammar::parse(\"42\")"
---
Ok(
    Number(
        42,
    ),
)
