example/src/snapshots/adze_example__arithmetic__tests__zero.snap
---
source: src/arithmetic.rs
expression: "grammar::parse(\"0\")"
---
Ok(
    Number(
        0,
    ),
)
